Edited wiki page INSTALL_NODE through web user interface.

--- a/wiki/INSTALL_NODE.wiki
+++ b/wiki/INSTALL_NODE.wiki
@@ -1,3 +1,5 @@
+#summary install NODE on WINDOWS, LINUX and MAC OS X
+
 =Install NODE=
 You can download NODE installers for WINDOWS, LINUX and MAC OS X here: http://nodejs.org/download/
 
