Edited wiki page INSTALL_JAP_LOCAL_NODE through web user interface.

--- a/wiki/INSTALL_JAP_LOCAL_NODE.wiki
+++ b/wiki/INSTALL_JAP_LOCAL_NODE.wiki
@@ -9,19 +9,19 @@
   * unzip JAP_LOCAL_NODE-X.X.X.zip
   * open JAP_LOCAL_NODE-X.X.X
   * [CONFIGURE_JAP configure JAP_LOCAL_NODE.json.js]
-    * LOCAL_PROXY_SERVER.ADDRESS
+    * LOCAL_PROXY_SERVER.ADDRESS (OPTIONAL)
     * LOCAL_PROXY_SERVER.PORT
     * REMOTE_PROXY_SERVERS[] (array of REMOTE_PROXY_SERVER)
     * REMOTE_PROXY_SERVER.TYPE (type of REMOTE_PROXY_SERVER, "HTTP" or "HTTPS")
     * REMOTE_PROXY_SERVER.ADDRESS
     * REMOTE_PROXY_SERVER.PORT (standard "HTTP" is port 80, "HTTPS" is port 443)
-    * REMOTE_PROXY_SERVER.AUTHENTICATION.USERNAME
-    * REMOTE_PROXY_SERVER.AUTHENTICATION.PASSWORD
-    * REMOTE_PROXY_SERVER.CERTIFICATE.AUTHENTICATION.FILE (CA.pem of REMOTE_PROXY_SERVER if type of REMOTE_PROXY_SERVER is "HTTPS")
-    * PROXY_SERVER.ADDRESS
-    * PROXY_SERVER.PORT
-    * PROXY_SERVER.AUTHENTICATION.USERNAME
-    * PROXY_SERVER.AUTHENTICATION.PASSWORD
+    * REMOTE_PROXY_SERVER.AUTHENTICATION.USERNAME (OPTIONAL)
+    * REMOTE_PROXY_SERVER.AUTHENTICATION.PASSWORD (OPTIONAL)
+    * REMOTE_PROXY_SERVER.CERTIFICATE.AUTHENTICATION.FILE (OPTIONAL, CA.pem of REMOTE_PROXY_SERVER if type of REMOTE_PROXY_SERVER is "HTTPS")
+    * PROXY_SERVER.ADDRESS (OPTIONAL)
+    * PROXY_SERVER.PORT (OPTIONAL)
+    * PROXY_SERVER.AUTHENTICATION.USERNAME (OPTIONAL)
+    * PROXY_SERVER.AUTHENTICATION.PASSWORD (OPTIONAL)
   * execute JAP_LOCAL_NODE.bat
   * open
     * FIREFOX
