--- a/wiki/INSTALL_JAP_REMOTE_NODE.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_NODE.wiki
@@ -9,4 +9,11 @@
   * unzip JAP_REMOTE_NODE-X.X.X.zip
   * open JAP_REMOTE_NODE-X.X.X
   * [CONFIGURE_JAP configure JAP_REMOTE_NODE.json.js]
+    * REMOTE_PROXY_SERVER.TYPE (type of REMOTE_PROXY_SERVER, "HTTP" or "HTTPS")
+    * REMOTE_PROXY_SERVER.ADDRESS
+    * REMOTE_PROXY_SERVER.PORT
+    * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.USERNAME
+    * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.PASSWORD
+    * REMOTE_PROXY_SERVER.CERTIFICATE.KEY.FILE (CK.pem of REMOTE_PROXY_SERVER if type of REMOTE_PROXY_SERVER is "HTTPS")
+    * REMOTE_PROXY_SERVER.CERTIFICATE.FILE (C.pem of REMOTE_PROXY_SERVER if type of REMOTE_PROXY_SERVER is "HTTPS")
   * execute JAP_REMOTE_NODE.bat
