--- a/wiki/INSTALL_JAP_LOCAL_NODE.wiki
+++ b/wiki/INSTALL_JAP_LOCAL_NODE.wiki
@@ -8,15 +8,22 @@
 ==Installation==
   * unzip JAP_LOCAL_NODE-X.X.X.zip
   * open JAP_LOCAL_NODE-X.X.X
-  * [CONFIGURE_JAP configure JAP_LOCAL_NODE.json.js]
+  * configure JAP_LOCAL_NODE.json.js
     * LOCAL_PROXY_SERVER.ADDRESS
     * LOCAL_PROXY_SERVER.PORT
-    * REMOTE_PROXY_SERVERS`[`X`]`.TYPE (type of REMOTE_PROXY_SERVER, "HTTP" or "HTTPS")
-    * REMOTE_PROXY_SERVERS`[`X`]`.ADDRESS
-    * REMOTE_PROXY_SERVERS`[`X`]`.PORT (standard "HTTP" is port 80, "HTTPS" is port 443)
-    * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.USERNAME
-    * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.PASSWORD
-    * REMOTE_PROXY_SERVER.CERTIFICATE.AUTHENTICATION.FILE (CA.pem of REMOTE_PROXY_SERVER if type of REMOTE_PROXY_SERVER is "HTTPS")
+    * "HTTP" REMOTE_PROXY_SERVER 
+      * REMOTE_PROXY_SERVERS`[`X`]`.TYPE = "HTTP"
+      * REMOTE_PROXY_SERVERS`[`X`]`.ADDRESS
+      * REMOTE_PROXY_SERVERS`[`X`]`.PORT
+      * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.USERNAME
+      * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.PASSWORD
+    * "HTTPS" REMOTE_PROXY_SERVER 
+      * REMOTE_PROXY_SERVERS`[`X`]`.TYPE = "HTTPS"
+      * REMOTE_PROXY_SERVERS`[`X`]`.ADDRESS
+      * REMOTE_PROXY_SERVERS`[`X`]`.PORT
+      * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.USERNAME
+      * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.PASSWORD
+      * REMOTE_PROXY_SERVER.CERTIFICATE.AUTHENTICATION.FILE = "CA.pem"
     * PROXY_SERVER.ADDRESS
     * PROXY_SERVER.PORT
     * PROXY_SERVER.AUTHENTICATION.USERNAME
