Edited wiki page INSTALL_JAP_REMOTE_NODE_DOTCLOUD through web user interface.

--- a/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
@@ -13,8 +13,8 @@
     * REMOTE_PROXY_SERVER.TYPE = "HTTP"
     * REMOTE_PROXY_SERVER.ADDRESS = ""
     * REMOTE_PROXY_SERVER.PORT
-    * REMOTE_PROXY_SERVER.AUTHENTICATION[X].USERNAME
-    * REMOTE_PROXY_SERVER.AUTHENTICATION[X].PASSWORD
+    * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.USERNAME
+    * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.PASSWORD
   * open CONSOLE
     * cd JAP_REMOTE_NODE_DOTCLOUD-X.X.X
     * dotcloud create application-id
