Edited wiki page INSTALL_NODE through web user interface.

--- a/wiki/INSTALL_NODE.wiki
+++ b/wiki/INSTALL_NODE.wiki
@@ -4,3 +4,5 @@
 You can download NODE installers for WINDOWS, LINUX and MAC OS X here: http://nodejs.org/download/
 
 You can download NODE source here: http://nodejs.org/download/
+
+More information: https://github.com/joyent/node/wiki/Installation
