Edited wiki page INSTALL_JAP_REMOTE_NODE_DOTCLOUD through web user interface.

--- a/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
@@ -12,7 +12,7 @@
   * configure JAP_REMOTE_NODE.json.js
     * REMOTE_PROXY_SERVER.TYPE = "HTTP"
     * REMOTE_PROXY_SERVER.ADDRESS = ""
-    * REMOTE_PROXY_SERVER.PORT
+    * REMOTE_PROXY_SERVER.PORT = 8080
     * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.USERNAME
     * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.PASSWORD
   * open CONSOLE
