Edited wiki page INSTALL_JAP_LOCAL_NODE through web user interface.

--- a/wiki/INSTALL_JAP_LOCAL_NODE.wiki
+++ b/wiki/INSTALL_JAP_LOCAL_NODE.wiki
@@ -11,13 +11,13 @@
   * configure JAP_LOCAL_NODE.json.js ([EXAMPLES examples])
     * LOCAL_PROXY_SERVER.ADDRESS
     * LOCAL_PROXY_SERVER.PORT
-    * "HTTP" REMOTE_PROXY_SERVER 
+    * HTTP 
       * REMOTE_PROXY_SERVERS`[`X`]`.TYPE = "HTTP"
       * REMOTE_PROXY_SERVERS`[`X`]`.ADDRESS
       * REMOTE_PROXY_SERVERS`[`X`]`.PORT
       * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.USERNAME
       * REMOTE_PROXY_SERVERS`[`X`]`.AUTHENTICATION.PASSWORD
-    * "HTTPS" REMOTE_PROXY_SERVER 
+    * HTTPS
       * REMOTE_PROXY_SERVERS`[`X`]`.TYPE = "HTTPS"
       * REMOTE_PROXY_SERVERS`[`X`]`.ADDRESS
       * REMOTE_PROXY_SERVERS`[`X`]`.PORT
