--- a/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
@@ -3,8 +3,8 @@
 =Install JAP_REMOTE_NODE_DOTCLOUD=
 
 ==Pre-installation==
-  * create DOTCLOUD account (https://www.dotcloud.com/)
-  * install DOTCLOUD [http://docs.dotcloud.com/0.4/firststeps/install/ CLI]
+  * create [https://www.dotcloud.com/ dotCloud] account
+  * install the [http://docs.dotcloud.com/0.4/firststeps/install/ CLI]
 
 ==Installation==
   * unzip JAP_REMOTE_NODE_DOTCLOUD-X.X.X.zip
@@ -16,6 +16,6 @@
     * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.USERNAME
     * REMOTE_PROXY_SERVER.AUTHENTICATION`[`X`]`.PASSWORD
   * open CONSOLE
-    * cd JAP_REMOTE_NODE_DOTCLOUD-X.X.X
-    * dotcloud create application-id
-    * dotcloud push application-id
+    * $ cd JAP_REMOTE_NODE_DOTCLOUD-X.X.X
+    * $ dotcloud create `<ApplicationId>`
+    * $ dotcloud push `<ApplicationId>`
