Edited wiki page INSTALL_JAP_REMOTE_NODE_DOTCLOUD through web user interface.

--- a/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_NODE_DOTCLOUD.wiki
@@ -18,4 +18,4 @@
   * open CONSOLE
     * $ cd JAP_REMOTE_NODE_DOTCLOUD-X.X.X
     * $ dotcloud create APPLICATION-ID
-    * $ dotcloud push APPLICATION-ID
+    * $ dotcloud push -A APPLICATION-ID
