Edited wiki page JAP_WS_REMOTE through web user interface.

--- a/wiki/JAP_WS_REMOTE.wiki
+++ b/wiki/JAP_WS_REMOTE.wiki
@@ -1,6 +1,8 @@
 #summary JAP_WS_REMOTE
 
 = JAP_WS_REMOTE =
+ * [JAP_WS_REMOTE#JAP_WS_REMOTE_DOTCLOUD JAP_WS_REMOTE_DOTCLOUD]
+ * [JAP_WS_REMOTE#JAP_WS_REMOTE_OPENSHIFT JAP_WS_REMOTE_OPENSHIFT]
 
 == JAP_WS_REMOTE_DOTCLOUD ==
  * PREPARATION
