--- a/wiki/JAP_WS_REMOTE.wiki
+++ b/wiki/JAP_WS_REMOTE.wiki
@@ -3,6 +3,7 @@
 = JAP_WS_REMOTE =
  * [JAP_WS_REMOTE#JAP_WS_REMOTE_DOTCLOUD JAP_WS_REMOTE_DOTCLOUD]
  * [JAP_WS_REMOTE#JAP_WS_REMOTE_OPENSHIFT JAP_WS_REMOTE_OPENSHIFT]
+ * [JAP_WS_REMOTE#JAP_WS_REMOTE_× JAP_WS_REMOTE_×]
 
 == JAP_WS_REMOTE_DOTCLOUD ==
  * PREPARATION
@@ -38,3 +39,6 @@
  * *ATTENTION*
    * REMOTE_PROXY_SERVERS HTTP port=8000
    * REMOTE_PROXY_SERVERS HTTPS port=8443
+
+== JAP_WS_REMOTE_× ==
+Coming soon. :P
