--- a/wiki/JAP_WS_REMOTE.wiki
+++ b/wiki/JAP_WS_REMOTE.wiki
@@ -3,7 +3,7 @@
 = JAP_WS_REMOTE =
  * [JAP_WS_REMOTE#JAP_WS_REMOTE_DOTCLOUD JAP_WS_REMOTE_DOTCLOUD]
  * [JAP_WS_REMOTE#JAP_WS_REMOTE_OPENSHIFT JAP_WS_REMOTE_OPENSHIFT]
- * [JAP_WS_REMOTE#JAP_WS_REMOTE_× JAP_WS_REMOTE_×]
+ * [JAP_WS_REMOTE#JAP_WS_REMOTE_%C3%97 JAP_WS_REMOTE_×]
 
 == JAP_WS_REMOTE_DOTCLOUD ==
  * PREPARATION
