Edited wiki page EXAMPLES through web user interface.

--- a/wiki/EXAMPLES.wiki
+++ b/wiki/EXAMPLES.wiki
@@ -1,8 +1,16 @@
 #summary examples
 
 =Examples=
+ * [EXAMPLES# Example 1]
+ * [EXAMPLES# Example 2]
+ * [EXAMPLES# Example 3]
+ * [EXAMPLES# Example 4]
+ * [EXAMPLES# Example 5]
 
-==Example 1: LOCAL_PROXY_SERVER (HTTP) --- INTERNET --- REMOTE_PROXY_SERVER (HTTP)==
+==Example 1==
+
+*LOCAL_PROXY_SERVER (HTTP) --- INTERNET --- REMOTE_PROXY_SERVER (HTTP)*
+
 JAP_LOCAL_NODE.json.js
 {{{
 module.exports = 
@@ -51,7 +59,10 @@ module.exports =
 }
 }}}
 
-==Example 2: LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)==
+==Example 2==
+
+*LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)*
+
 JAP_LOCAL_NODE.json.js
 {{{
 module.exports = 
@@ -115,7 +126,10 @@ module.exports =
 }
 }}}
 
-==Example 3: LOCAL_PROXY_SERVER (HTTPS) --- PROXY_SERVER --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)==
+==Example 3==
+
+*LOCAL_PROXY_SERVER (HTTPS) --- PROXY_SERVER --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)*
+
 JAP_LOCAL_NODE.json.js
 {{{
 module.exports = 
@@ -189,7 +203,10 @@ module.exports =
 }
 }}}
 
-==Example 4: LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (DOTCLOUD) --- REMOTE_PROXY_SERVER (HTTP)==
+==Example 4==
+
+*LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (DOTCLOUD) --- REMOTE_PROXY_SERVER (HTTP)*
+
 JAP_LOCAL_NODE.json.js
 {{{
 module.exports = 
@@ -238,7 +255,10 @@ module.exports =
 }
 }}}
 
-==Example 4: LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (OPENSHIFT) --- REMOTE_PROXY_SERVER (HTTP)==
+==Example 5==
+
+*LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (OPENSHIFT) --- REMOTE_PROXY_SERVER (HTTP)*
+
 JAP_WS_REMOTE.json
 {{{
 {
