--- a/wiki/JAP_WS_LOCAL.wiki
+++ b/wiki/JAP_WS_LOCAL.wiki
@@ -16,7 +16,7 @@ According to [https://github.com/jvansteirteghem/jap/blob/master/JAP_WS_LOCAL_PY
  * SETUP
    * unzip JAP_WS_LOCAL_PYTHON-X.X.X.zip
    * open JAP_WS_LOCAL_PYTHON-X.X.X
-   * configure JAP_WS_LOCAL.json ([EXAMPLES examples])
+   * configure JAP_WS_LOCAL.json ([EXAMPLES])
    * execute JAP_WS_LOCAL.bat
 
 == JAP_WS_LOCAL_NODE ==
@@ -27,7 +27,7 @@ According to [https://github.com/jvansteirteghem/jap/blob/master/JAP_WS_LOCAL_NO
  * SETUP
    * unzip JAP_LOCAL_NODE-X.X.X.zip
    * open JAP_LOCAL_NODE-X.X.X
-   * configure JAP_LOCAL_NODE.json.js ([EXAMPLES examples])
+   * configure JAP_LOCAL_NODE.json.js ([EXAMPLES])
    * execute JAP_LOCAL_NODE.bat
 
 == APPLY ==
