--- a/wiki/JAP_WS_REMOTE.wiki
+++ b/wiki/JAP_WS_REMOTE.wiki
@@ -1,5 +1,5 @@
 #summary JAP_WS_REMOTE
-#labels Phase-Deploy
+#labels Phase-Deploy,Featured
 
 = JAP_WS_REMOTE =
  * [JAP_WS_REMOTE#JAP_WS_REMOTE_DOTCLOUD JAP_WS_REMOTE_DOTCLOUD]
