--- a/wiki/JAP_WS_REMOTE.wiki
+++ b/wiki/JAP_WS_REMOTE.wiki
@@ -37,7 +37,7 @@ Jeroen, it is not finished yet. Feel free to change any things you think are ina
    * open CONSOLE
      * rhc app create -a application-id -t diy-0.1
      * cd application-id
-     * xcopy ..\JAP_WS_REMOTE_PYTHON_OPENSHIFT-X.X.X\*.* /s
+     * {{{xcopy ..\JAP_WS_REMOTE_PYTHON_OPENSHIFT-X.X.X\*.* /s}}}
      * {{{chomd 755 .openshift/action_hooks/*}}} ### Windows users skip this step, details in issue 10
      * git add -A
      * git commit -m "JAP"
