--- a/wiki/JAP_WS_REMOTE.wiki
+++ b/wiki/JAP_WS_REMOTE.wiki
@@ -19,9 +19,9 @@ Jeroen, it is not finished yet. Feel free to change any things you think are ina
   * open JAP_REMOTE_×_DOTCLOUD-X.X.X
   * configure JAP_REMOTE_×.json× ([EXAMPLES#Example_4 Example 4])
   * open CONSOLE
-    * $ cd JAP_REMOTE_NODE_DOTCLOUD-X.X.X
-    * $ dotcloud create APPLICATION-ID
-    * $ dotcloud push -A APPLICATION-ID
+    # $ cd JAP_REMOTE_NODE_DOTCLOUD-X.X.X
+    # $ dotcloud create APPLICATION-ID
+    # $ dotcloud push -A APPLICATION-ID
  * *ATTENTION*
    * REMOTE_PROXY_SERVERS HTTP port=80
    * REMOTE_PROXY_SERVERS HTTPS port=443
@@ -35,13 +35,13 @@ Jeroen, it is not finished yet. Feel free to change any things you think are ina
    * open JAP_WS_REMOTE_PYTHON_OPENSHIFT-X.X.X
    * configure JAP_WS_REMOTE.json ([EXAMPLES#Example_5 Example 5])
    * open CONSOLE
-     * rhc app create -a application-id -t diy-0.1
-     * cd application-id
-     * {{{xcopy ..\JAP_WS_REMOTE_PYTHON_OPENSHIFT-X.X.X\*.* /s}}}
-     * {{{chomd 755 .openshift/action_hooks/*}}} ### Windows users skip this step, details in issue 10
-     * git add -A
-     * git commit -m "JAP"
-     * git push
+     # rhc app create -a application-id -t diy-0.1
+     # cd application-id
+     # {{{xcopy ..\JAP_WS_REMOTE_PYTHON_OPENSHIFT-X.X.X\*.* /s}}}
+     # {{{chomd 755 .openshift/action_hooks/*}}} ### Windows users skip this step, details in issue 10
+     # git add -A
+     # git commit -m "JAP"
+     # git push
  * *ATTENTION*
    * REMOTE_PROXY_SERVERS HTTP port=8000
    * REMOTE_PROXY_SERVERS HTTPS port=8443
