--- a/wiki/JAP_WS_REMOTE.wiki
+++ b/wiki/JAP_WS_REMOTE.wiki
@@ -5,6 +5,10 @@
 Jeroen, it is not finished yet. Feel free to change any things you think are inappropriate for any changes of WIKI can be recovered.
 </wiki:comment>
 
+=Update=
+
+[2013.Jan.17] JAP_WS_REMOTE_PYTHON_OPENSHIFT-2.0.0-SNAPSHOT-2.zip has a bug, and some more tests with !OpenShift must be done, which needs some time.
+
 = JAP_WS_REMOTE =
  * [JAP_WS_REMOTE#JAP_WS_REMOTE_DOTCLOUD JAP_WS_REMOTE_DOTCLOUD]
  * [JAP_WS_REMOTE#JAP_WS_REMOTE_OPENSHIFT JAP_WS_REMOTE_OPENSHIFT]
