--- a/wiki/INSTALL_JAP_REMOTE_WS_PYTHON.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_WS_PYTHON.wiki
@@ -11,7 +11,7 @@
 ==INSTALLATION==
   * unzip JAP_REMOTE_WS_PYTHON-X.X.X.zip
   * open JAP_REMOTE_WS_PYTHON-X.X.X
-  * configure JAP_REMOTE_WS.json
+  * [CONFIGURE_JAP_REMOTE_WS configure JAP_REMOTE_WS.json]
   * execute JAP_REMOTE_WS.bat
 
 ==IMPORTANT==
