--- a/wiki/INSTALL_JAP_REMOTE_WS_PYTHON_DOTCLOUD.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_WS_PYTHON_DOTCLOUD.wiki
@@ -9,7 +9,7 @@
 ==INSTALLATION==
   * unzip JAP_REMOTE_WS_PYTHON_DOTCLOUD-X.X.X.zip
   * open JAP_REMOTE_WS_PYTHON_DOTCLOUD-X.X.X
-  * configure JAP_REMOTE_WS.json
+  * [CONFIGURE_JAP_REMOTE_WS configure JAP_REMOTE_WS.json]
   * open CONSOLE
     * cd JAP_REMOTE_WS_PYTHON_DOTCLOUD-X.X.X
     * dotcloud create application-id
