--- a/wiki/INSTALL_JAP_REMOTE_WS_NODE.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_WS_NODE.wiki
@@ -9,7 +9,7 @@
   * unzip JAP_REMOTE_WS_NODE-X.X.X.zip
   * open JAP_REMOTE_WS_NODE-X.X.X
   * execute NM.bat
-  * configure JAP_REMOTE_WS.json
+  * [CONFIGURE_JAP_REMOTE_WS configure JAP_REMOTE_WS.json]
   * execute JAP_REMOTE_WS.bat
 
 ==IMPORTANT==
