--- a/wiki/INSTALL_JAP_REMOTE_WS_NODE_MODULUS.wiki
+++ b/wiki/INSTALL_JAP_REMOTE_WS_NODE_MODULUS.wiki
@@ -8,7 +8,7 @@
 ==INSTALLATION==
   * unzip JAP_REMOTE_WS_NODE_MODULUS-X.X.X.zip
   * open JAP_REMOTE_WS_NODE_MODULUS-X.X.X
-  * configure JAP_REMOTE_WS.json
+  * [CONFIGURE_JAP_REMOTE_WS configure JAP_REMOTE_WS.json]
   * zip JAP_REMOTE_WS_NODE_MODULUS-X.X.X.zip
   * upload JAP_REMOTE_WS_NODE_MODULUS-X.X.X.zip
 
