Edited wiki page INSTALL_JAP_LOCAL_SSH_PYTHON_WINDOWS through web user interface.

--- a/wiki/INSTALL_JAP_LOCAL_SSH_PYTHON_WINDOWS.wiki
+++ b/wiki/INSTALL_JAP_LOCAL_SSH_PYTHON_WINDOWS.wiki
@@ -6,8 +6,8 @@
 ==INSTALLATION==
   * unzip JAP_LOCAL_SSH_PYTHON_WINDOWS-X.X.X.zip
   * open JAP_LOCAL_SSH_PYTHON_WINDOWS-X.X.X
-  * configure JAP_LOCAL_SSH.json
+  * [CONFIGURE_JAP_LOCAL_SSH configure JAP_LOCAL_SSH.json]
   * execute JAP_LOCAL_SSH.bat
-  * [CONFIGURE_BROWSER configure browser]
+  * [CONFIGURE_BROWSER configure BROWSER]
 
 ==IMPORTANT==
