Edited wiki page INSTALL_JAP_LOCAL_PYTHON_WINDOWS through web user interface.

--- a/wiki/INSTALL_JAP_LOCAL_PYTHON_WINDOWS.wiki
+++ b/wiki/INSTALL_JAP_LOCAL_PYTHON_WINDOWS.wiki
@@ -7,8 +7,8 @@
 ==INSTALLATION==
   * unzip JAP_LOCAL_PYTHON_WINDOWS-X.X.X.zip
   * open JAP_LOCAL_PYTHON_WINDOWS-X.X.X
-  * configure JAP_LOCAL.json
+  * [CONFIGURE_JAP_LOCAL configure JAP_LOCAL.json]
   * execute JAP_LOCAL.bat
-  * [CONFIGURE_BROWSER configure browser]
+  * [CONFIGURE_BROWSER configure BROWSER]
 
 ==IMPORTANT==
