--- a/wiki/INSTALL_JAP_LOCAL_WS_PYTHON.wiki
+++ b/wiki/INSTALL_JAP_LOCAL_WS_PYTHON.wiki
@@ -11,8 +11,8 @@
 ==INSTALLATION==
   * unzip JAP_LOCAL_WS_PYTHON-X.X.X.zip
   * open JAP_LOCAL_WS_PYTHON-X.X.X
-  * configure JAP_LOCAL_WS.json
+  * [CONFIGURE_JAP_LOCAL_WS configure JAP_LOCAL_WS.json]
   * execute JAP_LOCAL_WS.bat
-  * [CONFIGURE_BROWSER configure browser]
+  * [CONFIGURE_BROWSER configure BROWSER]
 
 ==IMPORTANT==
