--- a/wiki/INSTALL_JAP_LOCAL_WS_NODE.wiki
+++ b/wiki/INSTALL_JAP_LOCAL_WS_NODE.wiki
@@ -9,8 +9,8 @@
   * unzip JAP_LOCAL_WS_NODE-X.X.X.zip
   * open JAP_LOCAL_WS_NODE-X.X.X
   * execute NM.bat
-  * configure JAP_LOCAL_WS.json
+  * [CONFIGURE_JAP_LOCAL_WS configure JAP_LOCAL_WS.json]
   * execute JAP_LOCAL_WS.bat
-  * [CONFIGURE_BROWSER configure browser]
+  * [CONFIGURE_BROWSER configure BROWSER]
 
 ==IMPORTANT==
