Edited wiki page EXAMPLES through web user interface.

--- a/wiki/EXAMPLES.wiki
+++ b/wiki/EXAMPLES.wiki
@@ -231,8 +231,7 @@ JAP_REMOTE_WS.json
 {
     "REMOTE_PROXY_SERVER":
     {
-        "TYPE": "HTTP",
-        "PORT": 8080,
+        "TYPE": "HTTPS",
         "AUTHENTICATION":
         [
             {
