Edited wiki page EXAMPLES through web user interface.

--- a/wiki/EXAMPLES.wiki
+++ b/wiki/EXAMPLES.wiki
@@ -1,15 +1,8 @@
 #summary examples
 
-=Examples=
- * [EXAMPLES#Example_1 Example 1]
- * [EXAMPLES#Example_2 Example 2]
- * [EXAMPLES#Example_3 Example 3]
- * [EXAMPLES#Example_4 Example 4]
- * [EXAMPLES#Example_5 Example 5]
+=EXAMPLES=
 
-==Example 1==
-
-*LOCAL_PROXY_SERVER (HTTP) --- INTERNET --- REMOTE_PROXY_SERVER (HTTP)*
+==LOCAL_PROXY_SERVER (HTTP) --- INTERNET --- REMOTE_PROXY_SERVER (HTTP)==
 
 JAP_LOCAL_WS.json
 {{{
@@ -57,9 +50,7 @@ JAP_REMOTE_WS.json
 }
 }}}
 
-==Example 2==
-
-*LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)*
+==LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)==
 
 JAP_LOCAL_WS.json
 {{{
@@ -122,9 +113,7 @@ JAP_REMOTE_WS.json
 }
 }}}
 
-==Example 3==
-
-*LOCAL_PROXY_SERVER (HTTPS) --- PROXY_SERVER --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)*
+==LOCAL_PROXY_SERVER (HTTPS) --- PROXY_SERVER --- INTERNET --- REMOTE_PROXY_SERVER (HTTPS)==
 
 JAP_LOCAL_WS.json
 {{{
@@ -198,9 +187,7 @@ JAP_REMOTE_WS.json
 }
 }}}
 
-==Example 4==
-
-*LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (DOTCLOUD) --- REMOTE_PROXY_SERVER (HTTP)*
+==LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (DOTCLOUD) --- REMOTE_PROXY_SERVER (HTTP)==
 
 JAP_LOCAL_WS.json
 {{{
@@ -247,9 +234,7 @@ JAP_REMOTE_WS.json
 }
 }}}
 
-==Example 5==
-
-*LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (OPENSHIFT) --- REMOTE_PROXY_SERVER (HTTP)*
+==LOCAL_PROXY_SERVER (HTTPS) --- INTERNET --- PROXY_SERVER (OPENSHIFT) --- REMOTE_PROXY_SERVER (HTTP)==
 
 JAP_LOCAL_WS.json
 {{{
