--- a/wiki/EXAMPLES.wiki
+++ b/wiki/EXAMPLES.wiki
@@ -145,7 +145,7 @@ JAP_LOCAL_WS.json
     ],
     "PROXY_SERVER":
     {
-        "TYPE": "HTTP"
+        "TYPE": "HTTP",
         "ADDRESS": "4.3.2.1",
         "PORT": 8080,
         "AUTHENTICATION":
