Edited wiki page CONFIGURE_JAP through web user interface.

--- a/wiki/CONFIGURE_JAP.wiki
+++ b/wiki/CONFIGURE_JAP.wiki
@@ -11,7 +11,12 @@
     "LOCAL_SERVER":
     {
         "ADDRESS": "127.0.0.1",
-        "PORT": 8080
+        "PORT": 8000,
+        "AUTHENTICATION":
+        {
+            "USERNAME": "",
+            "PASSWORD": ""
+        }
     }
 }
 }}}
